leadership-report-openshell/manifests/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshell
  namespace: openshell
  labels:
    app.kubernetes.io/part-of: openshell
  annotations:
    haproxy.router.openshift.io/enable-h2c: "true"
spec:
  to:
    kind: Service
    name: openshell
    weight: 100
  port:
    targetPort: grpc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
